# parallelization_of_operations_when-finding_linear_shapes_of_matrices

./: CMakeLists.txt  Tests.cpp  Tokens.cpp  Tokens.h  evaluatenode.cpp  evaluatenode.h  evaluation_graph_widget.cpp  evaluation_graph_widget.h  fluent_expression_constructor.h  main.cpp  makeSVG.sh  matrix.cpp  matrix.h  parser.cpp  parser.h  printer_to_dot.cpp  printer_to_dot.h  raw_AST_nodes.cpp  raw_AST_nodes.h  typed_AST_nodes.cpp  typed_AST_nodes.h
tests/: Tests.cpp  Tests.h
threadsafe_data_structures/: function_wrapper.h  main.cpp  thread_pool.h  thread_pull.h  thread_safe_queue.h
